# bgp-hackathon-2023

./: .gitignore  README.md  docker-compose.yaml  index.html  mrt2csv.py  package-lock.json  package.json  pyproject.toml  snapshot2csv.py
src/: App.css  App.js  custom.html  index.html  scripts.js
website/: app.js  package-lock.json  package.json
website/static/: custom.html  index.html  scripts.js
