[tool.poetry]
name = "lookingglass"
version = "0.1.0"
description = ""
authors = ["Arjan Wekking <arjan@nl-ix.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mrtparse = "^2.2.0"
clickhouse-connect = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
